[tool.poetry]
name = "diffusive-phone"
version = "0.1.0"
description = ""
authors = ["mt-caret <mtakeda.enigsol@gmail.com>"]
readme = "README.md"
packages = [{include = "diffusive_phone"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
diffusers = "0.2.4"
transformers = "^4.21.2"
scipy = "^1.9.1"
ftfy = "^6.1.1"
#torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp38-cp38-linux_x86_64.whl" }
torch = { version = "=1.12.1+cu116", source = "pytorch"}
websockets = "^10.3"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu116/"
secondary = true


[tool.poetry.group.dev.dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"