[tool.poetry]
name = "diffusive-phone"
version = "0.1.0"
description = ""
authors = ["mt-caret <mtakeda.enigsol@gmail.com>"]
readme = "README.md"
packages = [{include = "diffusive_phone"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
diffusers = "0.2.4"
transformers = "^4.21.2"
scipy = "^1.9.1"
ftfy = "^6.1.1"
torch = { version = "=1.12.1+cu116", source = "pytorch"}
"discord.py" = "^2.0.1"
websockets = "^10.3"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu116/"
secondary = true


[tool.poetry.group.dev.dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"